[gd_scene load_steps=34 format=3 uid="uid://dkehcouxttbcf"]

[ext_resource type="Texture2D" uid="uid://dluxk52mx2i8c" path="res://player/assets/Player.png" id="1_flnh0"]
[ext_resource type="Script" path="res://player/Scripts/player.gd" id="1_grrwd"]
[ext_resource type="Script" path="res://player/Scripts/player_state_machine.gd" id="3_0ykeo"]
[ext_resource type="Script" path="res://player/Scripts/state_idle.gd" id="4_41y8s"]
[ext_resource type="Script" path="res://player/Scripts/state_walk.gd" id="5_8qm8r"]
[ext_resource type="Script" path="res://player/Scripts/state_attack.gd" id="6_stubr"]
[ext_resource type="AudioStream" uid="uid://bqjobjiuxu5k1" path="res://player/assets/SwordSwoosh.wav" id="7_g7vtk"]
[ext_resource type="Script" path="res://player/Scripts/player_interaction_host.gd" id="8_nxaq8"]
[ext_resource type="PackedScene" uid="uid://pijymgqgt25b" path="res://General Nodes/HurtBox/hurt_box.tscn" id="8_vopde"]
[ext_resource type="Script" path="res://player/Scripts/state_stun.gd" id="9_jlmkm"]
[ext_resource type="PackedScene" uid="uid://y83cel2gqa7m" path="res://General Nodes/Hit Box/hit_box.tscn" id="10_vvc5d"]
[ext_resource type="AudioStream" uid="uid://cqxn1hbcuunlu" path="res://player/assets/hit_player.wav" id="11_4mv2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2j6v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4yv3b"]

[sub_resource type="Animation" id="Animation_8xjnx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vt8kn"]
resource_name = "idle_down"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_bbp6l"]
resource_name = "idle_side"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_gcm8i"]
resource_name = "idle_up"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_ep22t"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.733333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_vbv2x"]
resource_name = "walk_side"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.733333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_xjs83"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.733333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_gmiad"]
resource_name = "attack_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1bc6m"]
resource_name = "attack_side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, -4)]
}

[sub_resource type="Animation" id="Animation_24mnx"]
resource_name = "attack_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.533333, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}

[sub_resource type="Animation" id="Animation_mw2q2"]
resource_name = "stun_down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_rrrg8"]
resource_name = "stun_side"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_b47k8"]
resource_name = "stun_up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ab6r"]
_data = {
"RESET": SubResource("Animation_8xjnx"),
"attack_down": SubResource("Animation_gmiad"),
"attack_side": SubResource("Animation_1bc6m"),
"attack_up": SubResource("Animation_24mnx"),
"idle_down": SubResource("Animation_vt8kn"),
"idle_side": SubResource("Animation_bbp6l"),
"idle_up": SubResource("Animation_gcm8i"),
"stun_down": SubResource("Animation_mw2q2"),
"stun_side": SubResource("Animation_rrrg8"),
"stun_up": SubResource("Animation_b47k8"),
"walk_down": SubResource("Animation_ep22t"),
"walk_side": SubResource("Animation_vbv2x"),
"walk_up": SubResource("Animation_xjs83")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nykk8"]

[sub_resource type="Animation" id="Animation_jghwd"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rtedo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jhktp"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0980392), Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_4mv2c")
}],
"times": PackedFloat32Array(0.2)
}
tracks/1/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edxvk"]
_data = {
"RESET": SubResource("Animation_rtedo"),
"damaged": SubResource("Animation_jhktp"),
"default": SubResource("Animation_jghwd")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(236, 136)
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_grrwd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n2j6v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_flnh0")
hframes = 6
vframes = 10

[node name="HurtBox" parent="Sprite2D" instance=ExtResource("8_vopde")]
collision_layer = 0
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/HurtBox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_4yv3b")
debug_color = Color(0.999701, 0, 0.10422, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ab6r")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_0ykeo")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_41y8s")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_8qm8r")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_stubr")
attack_sound = ExtResource("7_g7vtk")

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("9_jlmkm")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("8_nxaq8")

[node name="HitBox" parent="." instance=ExtResource("10_vvc5d")]
scale = Vector2(1, 0.988244)
collision_layer = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_nykk8")

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_edxvk")
}
